--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "console.table": "^0.10.0",
     "inquirer": "^8.1.1",
     "mysql": "^2.18.1"
+  },
+  "store": {
+    "adapter": "sequelize",
+    "type": "mysql",
+    "url": "seed://root:@3006//employee_tracker_db"
   }
 }
