--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "inquirer": "^8.1.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5"
   },
   "store": {
     "adapter": "sequelize",
